--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,7 @@
-.a {
+a {
   text-decoration: none;
 }
+p,
 h1,
 h2,
 h3,
@@ -22,12 +23,24 @@ img {
   height: auto;
 }
 
-.body {
-  font-family: 'Inter Tight', serif;
+body {
+  font-family: 'Inter Tight', sans-serif;
 }
 
 .container {
   max-width: 375px;
   margin: 0 auto;
   padding: 0 20px;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+    padding: 0 100px;
+  }
 }
