--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,10 +3,11 @@
     <h2 class="section-title">
       REVIEWS FROM OUR&nbsp;<span class="reviews-custom">CUSTOMERS</span>
     </h2>
-    <p class="reviews-text">
+    <p class="reviews-text-title">
       Words of our customers: impressions and opinions about the quality of our
       services and the freshness of our products.
     </p>
+
     <ul class="reviews-list">
       <li class="reviews-item">
         <img
@@ -17,7 +18,7 @@
           height="56"
         />
         <h3 class="reviews-title">John Wax</h3>
-        <p class="reviews-text">
+        <p class="reviews-text-item">
           These vegetables are my secret to delicious and healthy meals. The
           quality is always at the highest level, the aroma and taste are
           enchanting. I advise every fan of real products!
@@ -32,7 +33,7 @@
           height="56"
         />
         <h3 class="reviews-title">Victoria Romashenko</h3>
-        <p class="reviews-text">
+        <p class="reviews-text-item">
           I love how fast and fresh the vegetables are delivered. Salads always
           turn out so appetizing, and soups are real masterpieces. The quality
           is impeccable!
@@ -47,7 +48,7 @@
           height="56"
         />
 
-        <h3 class="reviews-title">Ihor Trachuk</h3>
+        <h3 class="reviews-text-item">Ihor Trachuk</h3>
         <p>
           Recently tried my fresh tomatoes and peppers - amazing! The
           authenticity of the taste, as if from the garden directly to my table.
