--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,22 +1,20 @@
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1158px) {
-  .container {
-    max-width: 1158px;
-    padding: 0 15px;
-  }
-}
-
 .reviews-section {
   background-color: #fbfbfb;
   padding: 100px 0px;
 }
 
-.section-title {
+.reviews-content {
+  text-align: left;
+  display: block;
+  max-width: 553px;
+  margin-bottom: 50px;
+}
+
+.reviews-section-title {
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 100%;
+  letter-spacing: -0.01em;
   color: #141414;
 }
 
@@ -24,12 +22,13 @@
   color: #576f35;
 }
 .reviews-text-title {
-  margin-top: 25px;
-  margin-bottom: 25px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 125%;
+  padding-top: 25px;
 }
 
 .reviews-list {
-  margin-bottom: 50px;
   justify-content: center;
   display: flex;
   gap: 0 25px;
@@ -41,6 +40,31 @@
   width: 343px;
   height: 258px;
 }
-.reviews-item-png {
-  color: aqua;
+
+.reviews-png {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.reviews-title {
+  margin-top: 24px;
+  padding-bottom: 8px;
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 110%;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: var(--text);
+}
+
+.reviews-text-item {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  text-align: center;
+  color: rgba(20, 20, 20, 0.4);
 }
