--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,22 +1,26 @@
 <section class="reviews-section">
   <div class="container">
-    <h2 class="section-title">
-      REVIEWS FROM OUR&nbsp;<span class="reviews-custom">CUSTOMERS</span>
-    </h2>
-    <p class="reviews-text-title">
-      Words of our customers: impressions and opinions about the quality of our
-      services and the freshness of our products.
-    </p>
+    <div class="reviews-content">
+      <h2 class="reviews-section-title">
+        REVIEWS FROM OUR&nbsp;<span class="reviews-custom">CUSTOMERS</span>
+      </h2>
+      <p class="reviews-text-title">
+        Words of our customers: impressions and opinions about the quality of
+        our services and the freshness of our products.
+      </p>
+    </div>
 
     <ul class="reviews-list">
       <li class="reviews-item">
-        <img
-          class="reviews-item-png"
-          src="/img/reviews/john.png"
-          alt="John Wax avatar"
-          width="56"
-          height="56"
-        />
+        <div class="reviews-png">
+          <img
+            class="reviews-item-png"
+            src="/img/reviews/john.png"
+            alt="John Wax avatar"
+            width="56"
+            height="56"
+          />
+        </div>
         <h3 class="reviews-title">John Wax</h3>
         <p class="reviews-text-item">
           These vegetables are my secret to delicious and healthy meals. The
@@ -25,13 +29,15 @@
         </p>
       </li>
       <li class="reviews-item">
-        <img
-          class="reviews-item-png"
-          src="/img/reviews/victoria.png"
-          alt="Victoria Romashenko avatar"
-          width="56"
-          height="56"
-        />
+        <div class="reviews-png">
+          <img
+            class="reviews-item-png"
+            src="/img/reviews/victoria.png"
+            alt="Victoria Romashenko avatar"
+            width="56"
+            height="56"
+          />
+        </div>
         <h3 class="reviews-title">Victoria Romashenko</h3>
         <p class="reviews-text-item">
           I love how fast and fresh the vegetables are delivered. Salads always
@@ -40,16 +46,17 @@
         </p>
       </li>
       <li class="reviews-item">
-        <img
-          class="reviews-item-png"
-          src="../img/reviews/ihor.png"
-          alt="Ihor Trachuk avatar"
-          width="56"
-          height="56"
-        />
-
-        <h3 class="reviews-text-item">Ihor Trachuk</h3>
-        <p>
+        <div class="reviews-png">
+          <img
+            class="reviews-item-png"
+            src="../img/reviews/ihor.png"
+            alt="Ihor Trachuk avatar"
+            width="56"
+            height="56"
+          />
+        </div>
+        <h3 class="reviews-title">Ihor Trachuk</h3>
+        <p class="reviews-text-item">
           Recently tried my fresh tomatoes and peppers - amazing! The
           authenticity of the taste, as if from the garden directly to my table.
           It is now my main vegetable supplier.
