--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -12,15 +12,15 @@
 
     <ul class="reviews-list">
       <li class="reviews-item">
-        <div class="reviews-png">
-          <img
-            class="reviews-item-png"
-            src="/img/reviews/john.png"
-            alt="John Wax avatar"
-            width="56"
-            height="56"
-          />
-        </div>
+        <img
+          class="reviews-item-png"
+          srcset="/img/reviews/john.png, /img/reviews/john@2x.png"
+          src="/img/reviews/john.png"
+          alt="John Wax avatar"
+          width="56"
+          height="56"
+        />
+
         <h3 class="reviews-title">John Wax</h3>
         <p class="reviews-text-item">
           These vegetables are my secret to delicious and healthy meals. The
@@ -29,15 +29,15 @@
         </p>
       </li>
       <li class="reviews-item">
-        <div class="reviews-png">
-          <img
-            class="reviews-item-png"
-            src="/img/reviews/victoria.png"
-            alt="Victoria Romashenko avatar"
-            width="56"
-            height="56"
-          />
-        </div>
+        <img
+          class="reviews-item-png"
+          srcset="/img/reviews/victoria.png, /img/reviews/victoria@2x-1.png"
+          src="/img/reviews/victoria.png"
+          alt="Victoria Romashenko avatar"
+          width="56"
+          height="56"
+        />
+
         <h3 class="reviews-title">Victoria Romashenko</h3>
         <p class="reviews-text-item">
           I love how fast and fresh the vegetables are delivered. Salads always
@@ -46,15 +46,15 @@
         </p>
       </li>
       <li class="reviews-item">
-        <div class="reviews-png">
-          <img
-            class="reviews-item-png"
-            src="../img/reviews/ihor.png"
-            alt="Ihor Trachuk avatar"
-            width="56"
-            height="56"
-          />
-        </div>
+        <img
+          class="reviews-item-png"
+          srcset="/img/reviews/ihor.png, /img/reviews/ihor@2x-2.png"
+          src="/img/reviews/ihor.png"
+          alt="Ihor Trachuk avatar"
+          width="56"
+          height="56"
+        />
+
         <h3 class="reviews-title">Ihor Trachuk</h3>
         <p class="reviews-text-item">
           Recently tried my fresh tomatoes and peppers - amazing! The
