edits made according to review

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,19 @@
 <header class="header">
   <div class="container">
     <a href="../index.html" class="logo">
-      <svg class="icon-logo" width="16" height="16">
+      <!--Mobile icon -->
+      <svg class="icon-logo mob-icon" width="16" height="16">
         <use href="/img/icons/icons.svg#icon-logo-mob"></use>
       </svg>
-      <svg class="icon-text-logo" width="148" height="12">
+      <svg class="icon-text-logo mob-icon" width="148" height="12">
         <use href="/img/icons/icons.svg#icon-text-mob"></use>
+      </svg>
+      <!--Tablet icon -->
+      <svg class="icon-logo tablet-icon" width="18" height="18">
+        <use href="/img/icons/icons.svg#icon-logo-desk"></use>
+      </svg>
+      <svg class="icon-text-logo tablet-icon" width="168" height="15">
+        <use href="/img/icons/icons.svg#icon-text-desk"></use>
       </svg>
     </a>
     <nav class="navigation">
@@ -17,7 +25,7 @@
           <a class="nav-link" href="#vegetables">Vegetables</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contacts">Contacts</a>
+          <a class="nav-link" href="#reviews">Reviews</a>
         </li>
       </ul>
       <button class="shop-now-btn" type="button">Shop Now</button>
@@ -46,11 +54,13 @@
             <a class="nav-link" href="#vegetables">Vegetables</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contacts">Contacts</a>
+            <a class="nav-link" href="#reviews">Reviews</a>
           </li>
         </ul>
       </nav>
-      <button class="shop-now-btn-menu" type="button">Shop Now</button>
+      <button class="shop-now-btn shop-now-btn-menu" type="button">
+        Shop Now
+      </button>
     </div>
   </div>
 </header>
