--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,14 +5,11 @@
   top: 20px;
   left: 0;
   right: 0;
-  height: 32px;
   background: transparent;
   z-index: 10;
 }
 
 .header .container {
-  padding: 0 20px;
-  width: 320px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -29,15 +26,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.icon-logo {
-  display: block;
   fill: #fbfbfb;
 }
 
-.icon-text-logo {
-  fill: #fbfbfb;
+.tablet-icon {
+  display: none;
 }
 
 .burger-btn {
@@ -82,6 +75,7 @@
   align-items: center;
   height: 100%;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-bottom: 40px;
 }
 
 .modal-close-btn {
@@ -157,9 +151,10 @@
 
 .shop-now-btn-menu {
   display: flex;
+  justify-content: center;
   border: none;
+  align-items: center;
   border-radius: 30px;
-  padding: 16px 41px;
   width: 155px;
   height: 50px;
   font-family: 'Inter Tight', sans-serif;
@@ -169,27 +164,6 @@
   letter-spacing: -0.01em;
   text-transform: uppercase;
   color: #7a3145;
-  margin-bottom: 40px;
-}
-
-.shop-now-btn.active {
-  display: flex;
-  background-color: #7a3145;
-  color: #fbfbfb;
-  border: 1px solid rgba(251, 251, 251, 0.2);
-  width: 155px;
-  height: 50px;
-  border-radius: 30px;
-  padding: 16px 32px;
-  font-weight: 600;
-  font-size: 18px;
-  font-family: 'Inter Tight', sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 129%;
-  letter-spacing: -0.01em;
-  text-transform: uppercase;
-  color: #fbfbfb;
 }
 
 .is-hidden {
@@ -200,7 +174,6 @@
 @media (min-width: 768px) {
   .header {
     top: 32px;
-    height: 40px;
     padding: 0 32px;
   }
 
@@ -211,27 +184,24 @@
     height: 40px;
   }
 
-  .logo {
+  .mob-icon {
+    display: none;
+  }
+
+  .tablet-icon {
     display: flex;
+    stroke: #fbfbfb;
+    fill: #fbfbfb;
   }
 
-  .icon-logo {
-    width: 18px;
+  .logo {
+    width: 194px;
     height: 18px;
-  }
-
-  .icon-text-logo {
-    height: 15px;
   }
 
   .burger-btn {
     width: 40px;
     height: 40px;
-  }
-
-  .burger-icon {
-    width: 32px;
-    height: 32px;
   }
 
   .mobile-menu {
@@ -241,7 +211,7 @@
   }
 
   .mobile-menu-container {
-    margin-bottom: 40px;
+    padding-bottom: 50px;
   }
 
   .modal-close-btn {
@@ -258,25 +228,15 @@
 
   .shop-now-btn-menu {
     display: flex;
-    border-radius: 30px;
-    padding: 16px 32px;
     width: 157px;
     height: 52px;
-    font-family: 'Inter Tight', sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 111%;
-    letter-spacing: -0.01em;
-    text-transform: uppercase;
-    color: #7a3145;
   }
 }
 
 /* Десктопна версія (від 1280px) */
 @media (min-width: 1280px) {
   .header {
-    height: 52px;
-    padding: 0 100px;
+    top: 52px;
   }
 
   .header .container {
@@ -289,12 +249,6 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-  }
-
-  .logo {
-    width: 194px;
-    height: 18px;
-    align-items: center;
   }
 
   .navigation {
