--- a/src/css/base.css
+++ b/src/css/base.css
@@ -19,15 +19,16 @@ ol {
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 body {
   font-family: 'Inter Tight', sans-serif;
+  background-color: #7a3145;
+  margin: 0;
 }
 
 .container {
+  min-width: 320px;
   max-width: 375px;
   margin: 0 auto;
   padding: 0 20px;
