--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="reviews-content">
       <h2 class="reviews-section-title">
-        REVIEWS FROM OUR&nbsp;<span class="reviews-custom">CUSTOMERS</span>
+        REVIEWS FROM OUR <span class="reviews-custom">CUSTOMERS</span>
       </h2>
       <p class="reviews-text-title">
         Words of our customers: impressions and opinions about the quality of
@@ -28,6 +28,7 @@
           enchanting. I advise every fan of real products!
         </p>
       </li>
+
       <li class="reviews-item">
         <img
           class="reviews-item-png"
@@ -45,6 +46,7 @@
           is impeccable!
         </p>
       </li>
+
       <li class="reviews-item">
         <img
           class="reviews-item-png"
