--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -63,29 +63,20 @@
 .reviews-list {
   justify-content: center;
   display: flex;
-  gap: 0 25px;
+  gap: 25px;
 }
 
 .reviews-item {
   border: 1px solid rgba(122, 49, 69, 0.3);
   border-radius: 24px;
-  padding: 20px;
+  padding: 20px 16px;
   width: 335px;
-  height: 238px;
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 768px) {
   .reviews-item {
     width: 343px;
-    height: 258px;
   }
-}
-
-.reviews-item-png {
-  display: block;
-  margin: 0px 0px 24px 0px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 @media screen and (max-width: 767px) {
@@ -95,10 +86,17 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .reviews-item:nth-child(3) {
     display: none;
   }
+}
+
+.reviews-item-png {
+  display: block;
+  margin: 0px 0px 24px 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .reviews-title {
