--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -1,5 +1,5 @@
 <section id="vegetavles">
-  <div class="container">
+  <div class="container container-vegetables">
     <h2 class="title-vegetables">
       organic<span class="title-vegetables-two">vegetables</span>
     </h2>
@@ -14,8 +14,8 @@
         <p class="vegetables-tekst">60 USD / kg</p>
         <img
           class="vegetables-img"
-          src="../img/vegetables/carrot.png"
-          srcset="../img/vegetables/carrot@2x.png 2x"
+          src="/img/vegetables/carrot.png"
+          srcset="/img/vegetables/carrot@2x.png 2x"
           alt="carrot"
           width="282"
           height="243"
@@ -26,8 +26,8 @@
         <p class="vegetables-tekst">50 USD / kg</p>
         <img
           class="vegetables-img"
-          src="../img/vegetables/leek.png"
-          srcset="../img/vegetables/leek@2x.png 2x"
+          src="/img/vegetables/leek.png"
+          srcset="/img/vegetables/leek@2x.png 2x"
           alt="leek"
           width="282"
           height="243"
@@ -38,8 +38,8 @@
         <p class="vegetables-tekst">40 USD / kg</p>
         <img
           class="vegetables-img"
-          src="../img/vegetables/mushrooms.png"
-          srcset="../img/vegetables/mushrooms@2x.png 2x"
+          src="/img/vegetables/mushrooms.png"
+          srcset="/img/vegetables/mushrooms@2x.png 2x"
           alt="mushrooms"
           width="282"
           height="243"
@@ -50,8 +50,8 @@
         <p class="vegetables-tekst">60 USD / kg</p>
         <img
           class="vegetables-img"
-          src="../img/vegetables/corn.png"
-          srcset="../img/vegetables/corn@2x.png 2x"
+          src="/img/vegetables/corn.png"
+          srcset="/img/vegetables/corn@2x.png 2x"
           alt="corn"
           width="282"
           height="243"
@@ -62,8 +62,8 @@
         <p class="vegetables-tekst">50 USD / kg</p>
         <img
           class="vegetables-img"
-          src="../img/vegetables/potatoes.png"
-          srcset="../img/vegetables/potatoes@2x.png 2x"
+          src="/img/vegetables/potatoes.png"
+          srcset="/img/vegetables/potatoes@2x.png 2x"
           alt="sweet potatoes"
           width="282"
           height="243"
@@ -74,8 +74,8 @@
         <p class="vegetables-tekst">40 USD / kg</p>
         <img
           class="vegetables-img"
-          src="../img/vegetables/carrot.png"
-          srcset="../img/vegetables/carrot@2x.png 2x"
+          src="/img/vegetables/carrot.png"
+          srcset="/img/vegetables/carrot@2x.png 2x"
           alt="carrot"
           width="282"
           height="243"
