--- a/src/css/vegetables.css
+++ b/src/css/vegetables.css
@@ -6,10 +6,45 @@
   letter-spacing: -0.01em;
   text-transform: uppercase;
   color: #fbfbfb;
+  margin-top: 80px;
+}
+.title-vegetables-two,
+.title-vegetables {
+  max-width: 335px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  text-align: center;
 }
 .title-vegetables-two {
   color: rgba(251, 251, 251, 0.3);
+  margin-bottom: 20px;
 }
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 0px;
+  }
+  .title-vegetables {
+    margin-top: 100px;
+  }
+  .title-vegetables-two,
+  .title-vegetables {
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .title-vegetables-two {
+    margin-bottom: 50px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .title-vegetables {
+    margin-top: 100px;
+  }
+  .title-vegetables-two {
+    margin-bottom: 25px;
+  }
+}
+
 .vegetables-title-tekst {
   font-weight: 500;
   font-size: 16px;
@@ -39,4 +74,10 @@
   background: #fbfbfb;
   width: 334px;
   height: 379px;
+}
+.container-vegetables {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Вертикальне центрування */
+  align-items: center;
 }
