--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="page-footer">
-    <div class="container footer-container">
+    <div class="footer-container">
         <div class="footer-info">
           <a class="logo-brand" href="./index.html"><svg class="icon-logo" width="16" height="16">
             <use href="/img/icons/icons.svg#icon-logo-mob"></use>
@@ -11,28 +11,22 @@
           <p class="footer-text">Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect choice</p>
         </div>
 
-        <div class="footer-nav">
-          <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="/src/index.html" id="how-it-works">how it works</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="/src/index.html" id="vegetables">vegetables</a>
-            </li>
+ <div class="footer-nav">
+     <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="/src/index.html" id="how-it-works">how it works</a></li>
+        <li class="nav-item"><a class="nav-link" href="/src/index.html"          id="vegetables">vegetables<a></li>
             <li class="nav-item"><a class="nav-link" href="/src/index.html" id="contacts">reviews</a>
             </li>
           </ul>
-        <address class="contacts">
-            <ul class="contacts-list">
+            <ul class="contacts-adress">
                 <li class="contacts-item">
                     <a class="contacts-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
                 </li>
                 <li class="contacts-item"><a class="contacts-link" href="">1678 S. Pioneer Road Salt<br>Lake Cit
                 </li>
             </ul>
-        </address>
         </div>
-        <div class="footer-privacy">
-          <a class="privacy-policy" href="">Privacy Policy / Cookie settings</a>
-          <p class="green-harvest">©Green Harvest 2023</p>
-      </div>
-         </div>
- </footer>
+    </div>
+          
+        <a class="privacy-policy">Privacy Policy / Cookie settings<span class="logo-green">©GreenHarvest 2023</span></a>
+</footer>
