--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,97 +1,136 @@
+ul,
+ol {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+
 .page-footer {
-    background-color: #7A3145;
-    width: 375px;
-    padding: 0;
-    
-   
- }
+  background-color: #7a3145;
+  margin: 0 auto;
+  padding: 40px 20px;
+}
 
- .footer-container {
-    display: flex;
-    flex-direction: column;
-     
-     
-    padding: 40px 20px;
-    
- }
- .footer-info {
-    max-width: 296px;
-    margin-bottom: 40px;
- }
-     
- .footer-text {
-    max-width: 296px;
-    display: flex;
-    font-weight: 500;
-    font-size: 14px;
-     margin: 0;
- }
-  ul,ol {
-    list-style-type: none;
-     }
-     a {
-        text-decoration: none;
-     }
-     .nav-list {
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
-        padding: 0;
-        margin: 0;
-    }
-    .footer-nav {
-        margin: 0;
-    }
-    .contacts-list {
-        padding: 0;
+.footer-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 40px;
+}
+.footer-info {
+  width: 296px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 14px;
+  color: #fbfbfb;
+}
 
-        font-weight: 600;
-        font-size: 14px;
-        margin-bottom: 80px;
-    }
-    .contacts {
-        display: flex;
-        flex-direction: column;
-         align-items: flex-start;
-        padding: 0;
-        
-    }
-     .contacts-item {
-        margin-bottom: 14px;
-     }
-     .nav-item {
-        margin-bottom: 14px;
-        font-weight: 600;
-        font-size: 28px;
-     }
+.footer-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  color: #fbfbfb;
+}
+.nav-item {
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 1;
+  letter-spacing: -0.01em;
+  color: #fbfbfb;
+}
+.nav-link {
+  color: #fbfbfb;
+}
+.contacts-item {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.28571;
+  letter-spacing: -0.01em;
+}
+.contacts-link {
+  color: #fbfbfb;
+}
 
-     .footer-privacy {
-        max-width: 335px;
-        display: flex; 
-     }
-     .privacy-policy {
-        width: 171px;
-        font-weight: 500;
-        font-size: 12px;
-        margin-right: 49px;
-        letter-spacing: -0.01em;
-        color: rgba(251, 251, 251, 0.5);
-    }
-    .brand-logo {
-        width: 115px;
-        font-weight: 500;
-        font-size: 12px;
-        margin: 0;
-        letter-spacing: -0.01em;
-        color: rgba(251, 251, 251, 0.5);
-    }
+.footer-nav {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 40px;
+}
+.nav-list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 14px;
+}
+.contacts-adress {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 14px;
+}
+.logo-green,
+.privacy-policy {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: -0.01em;
+  color: rgba(251, 251, 251, 0.5);
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 49px;
+}
 
-    @media screen and (min-width: 768px) {
-        .container {
-            max-width: 768px;
-        }
-        .footer-container {
-            align-items: baseline;
-        }
+@media screen and (min-width: 768px) {
+  .page-footer {
+    padding: 32px;
+  }
+  .footer-container {
+    align-items: baseline;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    gap: 192px 224px;
+    height: 295px;
+    margin-bottom: 100px;
+  }
+  .footer-info {
+    gap: 25px;
+  }
+  .footer-text {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .footer-nav {
+    gap: 64px;
+  }
+  .contacts-adress {
+    gap: 25px;
+  }
+  .privacy-policy {
+    gap: 284px;
+  }
+}
 
-    }     
+@media screen and (min-width: 1208px) {
+  .page-footer {
+    padding: 50px 100px;
+  }
+  .footer-container {
+    flex-wrap: nowrap;
+  }
+  .footer-nav {
+    width: 513px;
+    height: 146px;
+  }
+}
