--- a/src/css/header.css
+++ b/src/css/header.css
@@ -48,15 +48,13 @@
 .mobile-menu {
   position: fixed;
   top: 0;
-  right: 0;
-  max-width: 375px;
-  min-width: 320px;
+  left: 0;
   width: 100%;
-  height: 100vh;
-  background-color: #7a3145;
+  height: 100%;
+  background: rgba(20, 20, 20, 0.4);
   display: none;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   z-index: 20;
 }
 
@@ -65,6 +63,14 @@
 }
 
 .mobile-menu-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  max-width: 375px;
+  width: 100%;
+  height: 100%;
+  background-color: #7a3145;
+  z-index: 30;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -160,7 +166,7 @@
   text-transform: uppercase;
   outline: none;
   color: #7a3145;
-  transition: background 0.3s, color 0.3s, border 0.3s;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .shop-now-btn-menu:active,
@@ -198,12 +204,6 @@
     height: 40px;
   }
 
-  .mobile-menu {
-    max-width: 351px;
-    max-height: 1024px;
-    width: 100%;
-  }
-
   .mobile-menu-container {
     padding-bottom: 50px;
   }
@@ -231,14 +231,13 @@
 @media (min-width: 1280px) {
   .header .container {
     width: 100%;
-    max-width: 1080px;
+    max-width: 1280px;
     z-index: 10;
     height: 52px;
     align-content: center;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
   }
 
   .navigation {
