--- a/src/css/vegetables.css
+++ b/src/css/vegetables.css
@@ -1,48 +1,21 @@
 .title-vegetables {
-  margin-bottom: 80px 0 20px;
+  margin-bottom: 20px;
   font-weight: 600;
   font-size: 48px;
   line-height: 1.04167;
   letter-spacing: -0.01em;
   text-transform: uppercase;
   color: #fbfbfb;
-  margin-top: 80px;
 }
 .title-vegetables-two,
 .title-vegetables {
   max-width: 335px;
-  display: inline-flex;
+  /* display: inline-flex;
   flex-wrap: wrap;
-  text-align: center;
+  text-align: center; */
 }
 .title-vegetables-two {
   color: rgba(251, 251, 251, 0.3);
-  margin-bottom: 20px;
-}
-@media screen and (min-width: 768px) {
-  .container {
-    padding: 0px;
-  }
-  .title-vegetables {
-    margin-top: 100px;
-  }
-  .title-vegetables-two,
-  .title-vegetables {
-    margin: 0px;
-    padding: 0px;
-  }
-
-  .title-vegetables-two {
-    margin-bottom: 50px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .title-vegetables {
-    margin-top: 100px;
-  }
-  .title-vegetables-two {
-    margin-bottom: 25px;
-  }
 }
 
 .vegetables-title-tekst {
@@ -50,6 +23,9 @@
   font-size: 16px;
   line-height: 1.25;
   color: #fbfbfb;
+  max-width: 335px;
+  max-height: 100%;
+  margin-bottom: 40px;
 }
 .vegetables-title {
   font-weight: 600;
@@ -57,6 +33,7 @@
   line-height: 1;
   letter-spacing: -0.01em;
   color: #7a3145;
+  margin-bottom: 12px;
 }
 .vegetables-tekst {
   font-weight: 600;
@@ -65,9 +42,9 @@
   letter-spacing: -0.01em;
   text-transform: uppercase;
   color: #141414;
+  margin-bottom: 10px;
 }
-.vegetables-img {
-}
+
 .vegetables-list-item {
   border-radius: 40px;
   padding: 32px 26px;
@@ -78,6 +55,49 @@
 .container-vegetables {
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Вертикальне центрування */
+  justify-content: center;
   align-items: center;
+  padding: 80px 0;
+}
+.vegetables-list {
+  display: inline-flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 0px;
+  }
+
+  .title-vegetables-two,
+  .title-vegetables {
+    margin-top: 0px;
+    padding-top: 100px;
+    margin-bottom: 50px;
+  }
+  .vegetables-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    row-gap: 28px;
+    padding: 100x 0;
+  }
+  .vegetables-title-tekst {
+    max-width: 626px;
+    max-height: 100%;
+    margin-bottom: 40px;
+  }
+  .container-vegetables {
+    align-items: normal;
+  }
+
+  @media screen and (min-width: 1280px) {
+    .title-vegetables-two,
+    .title-vegetables {
+      margin-top: 0px;
+      padding-top: 100px;
+      margin-bottom: 25px;
+    }
+  }
 }
