--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -1,86 +1,89 @@
 <section id="vegetavles">
   <div class="container container-vegetables">
     <h2 class="title-vegetables">
-      organic<span class="title-vegetables-two">vegetables</span>
+      organic<br /><span class="title-vegetables-two">vegetables</span>
     </h2>
     <p class="vegetables-title-tekst">
       Our organic vegetables are hand-picked from local farms and delivered
       straight to your doorstep, ensuring that you get the freshest and most
       nutritious produce possible.
     </p>
-    <ul class="vegetables-list">
-      <li class="vegetables-list-item">
-        <h3 class="vegetables-title">eggplant</h3>
-        <p class="vegetables-tekst">60 USD / kg</p>
-        <img
-          class="vegetables-img"
-          src="/img/vegetables/carrot.png"
-          srcset="/img/vegetables/carrot@2x.png 2x"
-          alt="carrot"
-          width="282"
-          height="243"
-        />
-      </li>
-      <li class="vegetables-list-item">
-        <h3 class="vegetables-title">leek</h3>
-        <p class="vegetables-tekst">50 USD / kg</p>
-        <img
-          class="vegetables-img"
-          src="/img/vegetables/leek.png"
-          srcset="/img/vegetables/leek@2x.png 2x"
-          alt="leek"
-          width="282"
-          height="243"
-        />
-      </li>
-      <li class="vegetables-list-item">
-        <h3 class="vegetables-title">mushrooms</h3>
-        <p class="vegetables-tekst">40 USD / kg</p>
-        <img
-          class="vegetables-img"
-          src="/img/vegetables/mushrooms.png"
-          srcset="/img/vegetables/mushrooms@2x.png 2x"
-          alt="mushrooms"
-          width="282"
-          height="243"
-        />
-      </li>
-      <li class="vegetables-list-item">
-        <h3 class="vegetables-title">corn</h3>
-        <p class="vegetables-tekst">60 USD / kg</p>
-        <img
-          class="vegetables-img"
-          src="/img/vegetables/corn.png"
-          srcset="/img/vegetables/corn@2x.png 2x"
-          alt="corn"
-          width="282"
-          height="243"
-        />
-      </li>
-      <li class="vegetables-list-item">
-        <h3 class="vegetables-title">sweet potatoes</h3>
-        <p class="vegetables-tekst">50 USD / kg</p>
-        <img
-          class="vegetables-img"
-          src="/img/vegetables/potatoes.png"
-          srcset="/img/vegetables/potatoes@2x.png 2x"
-          alt="sweet potatoes"
-          width="282"
-          height="243"
-        />
-      </li>
-      <li class="vegetables-list-item">
-        <h3 class="vegetables-title">carrot</h3>
-        <p class="vegetables-tekst">40 USD / kg</p>
-        <img
-          class="vegetables-img"
-          src="/img/vegetables/carrot.png"
-          srcset="/img/vegetables/carrot@2x.png 2x"
-          alt="carrot"
-          width="282"
-          height="243"
-        />
-      </li>
-    </ul>
+
+    <div class="img-container">
+      <ul class="vegetables-list">
+        <li class="vegetables-list-item">
+          <h3 class="vegetables-title">eggplant</h3>
+          <p class="vegetables-tekst">60 USD / kg</p>
+          <img
+            class="vegetables-img"
+            src="/img/vegetables/carrot.png"
+            srcset="/img/vegetables/carrot@2x.png 2x"
+            alt="carrot"
+            width="282"
+            height="243"
+          />
+        </li>
+        <li class="vegetables-list-item">
+          <h3 class="vegetables-title">leek</h3>
+          <p class="vegetables-tekst">50 USD / kg</p>
+          <img
+            class="vegetables-img"
+            src="/img/vegetables/leek.png"
+            srcset="/img/vegetables/leek@2x.png 2x"
+            alt="leek"
+            width="282"
+            height="243"
+          />
+        </li>
+        <li class="vegetables-list-item">
+          <h3 class="vegetables-title">mushrooms</h3>
+          <p class="vegetables-tekst">40 USD / kg</p>
+          <img
+            class="vegetables-img"
+            src="/img/vegetables/mushrooms.png"
+            srcset="/img/vegetables/mushrooms@2x.png 2x"
+            alt="mushrooms"
+            width="282"
+            height="243"
+          />
+        </li>
+        <li class="vegetables-list-item">
+          <h3 class="vegetables-title">corn</h3>
+          <p class="vegetables-tekst">60 USD / kg</p>
+          <img
+            class="vegetables-img"
+            src="/img/vegetables/corn.png"
+            srcset="/img/vegetables/corn@2x.png 2x"
+            alt="corn"
+            width="282"
+            height="243"
+          />
+        </li>
+        <li class="vegetables-list-item">
+          <h3 class="vegetables-title">sweet potatoes</h3>
+          <p class="vegetables-tekst">50 USD / kg</p>
+          <img
+            class="vegetables-img"
+            src="/img/vegetables/potatoes.png"
+            srcset="/img/vegetables/potatoes@2x.png 2x"
+            alt="sweet potatoes"
+            width="282"
+            height="243"
+          />
+        </li>
+        <li class="vegetables-list-item">
+          <h3 class="vegetables-title">carrot</h3>
+          <p class="vegetables-tekst">40 USD / kg</p>
+          <img
+            class="vegetables-img"
+            src="/img/vegetables/carrot.png"
+            srcset="/img/vegetables/carrot@2x.png 2x"
+            alt="carrot"
+            width="282"
+            height="243"
+          />
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
