change width -> max-width, create gradient

--- a/src/partials/howitwork.html
+++ b/src/partials/howitwork.html
@@ -1,4 +1,4 @@
-<section>
+<section class="howitwork-section">
   <div class="container container-how-it-work">
     <h2 class="visually-hidden">How it work</h2>
     <div class="photo-howitwork-wrapper">
