--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -3,9 +3,15 @@
   padding: 80px 0;
 }
 
+@media screen and (min-width: 768px) {
+  .reviews-section {
+    padding: 100px 0;
+  }
+}
+
 @media screen and (min-width: 1280px) {
   .reviews-section {
-    padding: 100px 100px;
+    padding: 100px 0;
   }
 }
 
