--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -1,5 +1,5 @@
-<section id="vegetavles">
-  <div class="container container-vegetables">
+<section id="vegetabvles">
+  <div class="container">
     <h2 class="title-vegetables">
       organic<br /><span class="title-vegetables-two">vegetables</span>
     </h2>
@@ -9,81 +9,79 @@
       nutritious produce possible.
     </p>
 
-    <div class="img-container">
-      <ul class="vegetables-list">
-        <li class="vegetables-list-item">
-          <h3 class="vegetables-title">eggplant</h3>
-          <p class="vegetables-tekst">60 USD / kg</p>
-          <img
-            class="vegetables-img"
-            src="/img/vegetables/carrot.png"
-            srcset="/img/vegetables/carrot@2x.png 2x"
-            alt="carrot"
-            width="282"
-            height="243"
-          />
-        </li>
-        <li class="vegetables-list-item">
-          <h3 class="vegetables-title">leek</h3>
-          <p class="vegetables-tekst">50 USD / kg</p>
-          <img
-            class="vegetables-img"
-            src="/img/vegetables/leek.png"
-            srcset="/img/vegetables/leek@2x.png 2x"
-            alt="leek"
-            width="282"
-            height="243"
-          />
-        </li>
-        <li class="vegetables-list-item">
-          <h3 class="vegetables-title">mushrooms</h3>
-          <p class="vegetables-tekst">40 USD / kg</p>
-          <img
-            class="vegetables-img"
-            src="/img/vegetables/mushrooms.png"
-            srcset="/img/vegetables/mushrooms@2x.png 2x"
-            alt="mushrooms"
-            width="282"
-            height="243"
-          />
-        </li>
-        <li class="vegetables-list-item">
-          <h3 class="vegetables-title">corn</h3>
-          <p class="vegetables-tekst">60 USD / kg</p>
-          <img
-            class="vegetables-img"
-            src="/img/vegetables/corn.png"
-            srcset="/img/vegetables/corn@2x.png 2x"
-            alt="corn"
-            width="282"
-            height="243"
-          />
-        </li>
-        <li class="vegetables-list-item">
-          <h3 class="vegetables-title">sweet potatoes</h3>
-          <p class="vegetables-tekst">50 USD / kg</p>
-          <img
-            class="vegetables-img"
-            src="/img/vegetables/potatoes.png"
-            srcset="/img/vegetables/potatoes@2x.png 2x"
-            alt="sweet potatoes"
-            width="282"
-            height="243"
-          />
-        </li>
-        <li class="vegetables-list-item">
-          <h3 class="vegetables-title">carrot</h3>
-          <p class="vegetables-tekst">40 USD / kg</p>
-          <img
-            class="vegetables-img"
-            src="/img/vegetables/carrot.png"
-            srcset="/img/vegetables/carrot@2x.png 2x"
-            alt="carrot"
-            width="282"
-            height="243"
-          />
-        </li>
-      </ul>
-    </div>
+    <ul class="vegetables-list">
+      <li class="vegetables-list-item">
+        <h3 class="vegetables-title">eggplant</h3>
+        <p class="vegetables-tekst">60 USD / kg</p>
+        <img
+          class="vegetables-img"
+          src="/img/vegetables/carrot.png"
+          srcset="/img/vegetables/carrot@2x.png 2x"
+          alt="carrot"
+          width="282"
+          height="243"
+        />
+      </li>
+      <li class="vegetables-list-item">
+        <h3 class="vegetables-title">leek</h3>
+        <p class="vegetables-tekst">50 USD / kg</p>
+        <img
+          class="vegetables-img"
+          src="/img/vegetables/leek.png"
+          srcset="/img/vegetables/leek@2x.png 2x"
+          alt="leek"
+          width="282"
+          height="243"
+        />
+      </li>
+      <li class="vegetables-list-item">
+        <h3 class="vegetables-title">mushrooms</h3>
+        <p class="vegetables-tekst">40 USD / kg</p>
+        <img
+          class="vegetables-img"
+          src="/img/vegetables/mushrooms.png"
+          srcset="/img/vegetables/mushrooms@2x.png 2x"
+          alt="mushrooms"
+          width="282"
+          height="243"
+        />
+      </li>
+      <li class="vegetables-list-item">
+        <h3 class="vegetables-title">corn</h3>
+        <p class="vegetables-tekst">60 USD / kg</p>
+        <img
+          class="vegetables-img"
+          src="/img/vegetables/corn.png"
+          srcset="/img/vegetables/corn@2x.png 2x"
+          alt="corn"
+          width="282"
+          height="243"
+        />
+      </li>
+      <li class="vegetables-list-item">
+        <h3 class="vegetables-title">sweet potatoes</h3>
+        <p class="vegetables-tekst">50 USD / kg</p>
+        <img
+          class="vegetables-img"
+          src="/img/vegetables/potatoes.png"
+          srcset="/img/vegetables/potatoes@2x.png 2x"
+          alt="sweet potatoes"
+          width="282"
+          height="243"
+        />
+      </li>
+      <li class="vegetables-list-item">
+        <h3 class="vegetables-title">carrot</h3>
+        <p class="vegetables-tekst">40 USD / kg</p>
+        <img
+          class="vegetables-img"
+          src="/img/vegetables/carrot.png"
+          srcset="/img/vegetables/carrot@2x.png 2x"
+          alt="carrot"
+          width="282"
+          height="243"
+        />
+      </li>
+    </ul>
   </div>
 </section>
