--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,32 +1,53 @@
 <footer class="page-footer">
+    <div class="container">
     <div class="footer-container">
         <div class="footer-info">
-          <a class="logo-brand" href="./index.html"><svg class="icon-logo" width="16" height="16">
+            <div class="footer-logo-wrap">
+          <a href="../index.html" class="logo-brand-svg">
+            <!--Mobile icon-->
+            <svg class="icon-logo mob-icon" width="16" height="16">
             <use href="/img/icons/icons.svg#icon-logo-mob"></use>
           </svg>
-          <svg class="icon-logo" width="146" height="12">
+          <svg class="icon-logo mob-icon-text" width="146" height="12">
             <use href="/img/icons/icons.svg#icon-text-mob"></use>
           </svg>
+          <!--Tablet icon-->
+          <svg class="icon-logo tablet-icon visually-hidden" width="18" height="18">
+            <use href="/img/icons/icons.svg#icon-logo-desk"></use>
+          </svg>
+          <svg class="icon-logo tablet-icon visually-hidden" width="168" height="15">
+            <use href="/img/icons/icons.svg#icon-text-desk"></use>
+          </svg>
         </a>
+        </div>
           <p class="footer-text">Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect choice</p>
         </div>
 
  <div class="footer-nav">
-     <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="/src/index.html" id="how-it-works">how it works</a></li>
-        <li class="nav-item"><a class="nav-link" href="/src/index.html"          id="vegetables">vegetables<a></li>
-            <li class="nav-item"><a class="nav-link" href="/src/index.html" id="contacts">reviews</a>
+     <ul class="footer-nav-list">
+        <li class="footer-nav-item"><a class="nav-link" href="/src/index.html" id="how-it-works">how it works</a></li>
+        <li class="footer-nav-item"><a class="nav-link" href="/src/index.html"          id="vegetables">vegetables<a></li>
+            <li class="footer-nav-item"><a class="nav-link" href="/src/index.html" id="contacts">reviews</a>
             </li>
           </ul>
             <ul class="contacts-adress">
-                <li class="contacts-item">
+                <li class="footer-contacts-item">
                     <a class="contacts-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
                 </li>
-                <li class="contacts-item"><a class="contacts-link" href="">1678 S. Pioneer Road Salt<br>Lake Cit
+                <li class="footer-contacts-item"><a class="contacts-link" href="">1678 S. Pioneer Road Salt<br>Lake Cit
                 </li>
             </ul>
         </div>
     </div>
-          
-        <a class="privacy-policy">Privacy Policy / Cookie settings<span class="logo-green">©GreenHarvest 2023</span></a>
+          <div class="footer-privacy">
+            <div class="footer-privacy-wrap1">
+<a class="privacy-policy-link">Privacy Policy</a>
+<p class="privacy-policy-link">/</p>
+<a class="privacy-policy-link">Cookie settings</a>
+            </div>
+            <div class="footer-privacy-wrap2">
+                <p class="privacy-policy-text">©Green Harvest 2023</p>
+            </div>
+          </div>
+        </div>
 </footer>
