--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -34,7 +34,7 @@
                 <li class="footer-contacts-item">
                     <a class="contacts-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
                 </li>
-                <li class="footer-contacts-item"><a class="contacts-link" href="">1678 S. Pioneer Road Salt<br>Lake Cit
+                <li class="footer-contacts-item"><a class="contacts-link" href="">1678 S. Pioneer Road Salt<br>Lake City UT 84104</a>
                 </li>
             </ul>
         </div>
