--- a/src/css/header.css
+++ b/src/css/header.css
@@ -167,6 +167,7 @@
   outline: none;
   color: #7a3145;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 
 .shop-now-btn-menu:active,
@@ -299,6 +300,7 @@
     text-transform: uppercase;
     color: #fbfbfb;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
   }
 
   .shop-now-btn:hover,
