--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,10 +25,9 @@
 
  <div class="footer-nav">
      <ul class="footer-nav-list">
-        <li class="footer-nav-item"><a class="nav-link" href="/src/index.html" id="how-it-works">how it works</a></li>
-        <li class="footer-nav-item"><a class="nav-link" href="/src/index.html"          id="vegetables">vegetables<a></li>
-            <li class="footer-nav-item"><a class="nav-link" href="/src/index.html" id="contacts">reviews</a>
-            </li>
+        <li class="footer-nav-item"><a class="nav-link" href="how-it-works">how it works</a></li>
+        <li class="footer-nav-item"><a class="nav-link" href="vegetables">vegetables<a></li>
+            <li class="footer-nav-item"><a class="nav-link" href="contacts">reviews</a></li>
           </ul>
             <ul class="contacts-adress">
                 <li class="footer-contacts-item">
