--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,7 +27,7 @@
      <ul class="footer-nav-list">
         <li class="footer-nav-item"><a class="nav-link" href="#how-it-works">how it works</a></li>
         <li class="footer-nav-item"><a class="nav-link" href="#vegetables">vegetables<a></li>
-            <li class="footer-nav-item"><a class="nav-link" href="#contacts">reviews</a></li>
+            <li class="footer-nav-item"><a class="nav-link" href="#reviews">reviews</a></li>
           </ul>
             <ul class="contacts-adress">
                 <li class="footer-contacts-item">
