add src/css/yourorder.css and  src/partials/yourorder.html

--- a/src/css/yourorder.css
+++ b/src/css/yourorder.css
@@ -1,3 +1,11 @@
+input:valid {
+  border-color: green;
+}
+
+input:invalid {
+  border-color: initial;
+}
+
 a:-webkit-any-link {
   text-decoration: none;
 }
