--- a/src/partials/yourorder.html
+++ b/src/partials/yourorder.html
@@ -27,6 +27,7 @@
               class="your-order-form-input"
               placeholder="Full Name"
               required
+              pattern="[A-Za-zА-Яа-яЁёІіЇїЄє]+"
             />
 
             <input
