--- a/src/partials/yourorder.html
+++ b/src/partials/yourorder.html
@@ -1,4 +1,4 @@
-<section class="your-order">
+<section id="your-order" class="your-order">
   <div class="container">
     <div class="your-order-inform">
       <h2 class="your-order-title">
