--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,9 +1,8 @@
 <section class="section-advertisement">
   <div class="container advertisement-container">
     <h2 class="visually-hidden">advertisement</h2>
+    <a class="section-advertisement-marker" href=""></a>
     <p class="section-advertisement-description">
-      <span class="advertisement-description-span">Discount up to 40%!</span>
-      Taste the vitamins and keep your health
-    </p>
+      <span class="advertisement-description-span">Discount up to 40%!</span>Taste the vitamins and keep your health</p>
   </div>
-</section>
+ </section>
