--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="container">
-    <a href="index.html" class="logo" alt="Logo">
+    <a href="index.html" class="logo">
       <!--Mobile icon -->
       <svg class="icon-logo mob-icon" width="16" height="16">
         <use href="/img/icons/icons.svg#icon-logo-mob"></use>
