--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -14,7 +14,7 @@
       <li class="reviews-item">
         <img
           class="reviews-item-png"
-          srcset="/img/reviews/john.png, /img/reviews/john@2x.png"
+          srcset="/img/reviews/john@2x.png"
           src="/img/reviews/john.png"
           alt="John Wax avatar"
           width="56"
@@ -32,7 +32,7 @@
       <li class="reviews-item">
         <img
           class="reviews-item-png"
-          srcset="/img/reviews/victoria.png, /img/reviews/victoria@2x-1.png"
+          srcset="/img/reviews/victoria@2x-1.png"
           src="/img/reviews/victoria.png"
           alt="Victoria Romashenko avatar"
           width="56"
@@ -50,7 +50,7 @@
       <li class="reviews-item">
         <img
           class="reviews-item-png"
-          srcset="/img/reviews/ihor.png, /img/reviews/ihor@2x-2.png"
+          srcset="/img/reviews/ihor@2x-2.png"
           src="/img/reviews/ihor.png"
           alt="Ihor Trachuk avatar"
           width="56"
