--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -1,84 +1,83 @@
-.section-advertisement{
-    background: #fbfbfb;
- }
- .advertisement-container  {
-    padding: 0 10px 80px 10px;
-    display: flex;
-    flex-direction: column;
-    position: relative;
- }
- 
- .section-advertisement-marker{
+.section-advertisement {
+  background: #fbfbfb;
+}
+.advertisement-container {
+  padding: 0 10px 80px 10px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.section-advertisement-marker {
+  border-radius: 12px;
+  background-color: #576f35;
+  height: 102px;
+  position: relative;
+  top: 102px;
+  z-index: 10;
+  box-sizing: border-box;
+}
+
+.section-advertisement-description {
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 1.04;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  color: #141414;
+  padding-left: 10px;
+  padding-right: 10px;
+  z-index: 11;
+}
+
+.advertisement-description-span {
+  padding-top: 3px;
+  display: block;
+  color: #fbfbfb;
+}
+
+@media screen and (min-width: 768px) {
+  .section-advertisement .container {
+    padding: 0 16px 100px 16px;
+  }
+
+  .section-advertisement-marker {
     border-radius: 12px;
     background-color: #576f35;
-    height: 102px;
+    height: 86px;
     position: relative;
-    top: 102px;
+    top: 86px;
     z-index: 10;
     box-sizing: border-box;
- }
- 
- .section-advertisement-description {
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 1.04;
-    letter-spacing: -0.01em;
-    text-transform: uppercase;
-    color: #141414;
-    padding-left: 10px;
-    padding-right: 10px;
-    z-index: 11;
- }
- 
- .advertisement-description-span {
-    padding-top: 3px;
-   display: block;
-    color: #fbfbfb;
- }
- 
- @media screen and (min-width: 768px) {
-    .section-advertisement .container {
-        padding: 0 16px 100px 16px;
-    }
-  
-    .section-advertisement-marker{
-        border-radius: 12px;
-        background-color: #576f35;
-        height: 86px;
-        position: relative;
-        top: 86px;
-        z-index: 10;
-        box-sizing: border-box;
-    }
- 
-    .section-advertisement-description {
-        font-size: 64px;
-        line-height: 1.09;
-        padding-top: 8px;
-        padding-left: 16px;
-        padding-right: 16px;
-    }
- }
- 
- @media screen and (min-width: 1280px) {
-    .section-advertisement .container {
-       max-width: 1280px;
-       padding: 0 100px 100px;
-    }
- 
-    .section-advertisement-description {
-        font-size: 76px;
-        line-height: 1.05;
-        padding-top: 0px 13px;
-    }
-  
-    .section-advertisement-marker{
-       max-width: 820px;
-    }
- 
-    .advertisement-description-span {
-        display: inline;
-        padding-right: 20px;
-    }
- }
- 
+  }
+
+  .section-advertisement-description {
+    font-size: 64px;
+    line-height: 1.09;
+    padding-top: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .section-advertisement .container {
+    max-width: 1280px;
+    padding: 0 100px 100px;
+  }
+
+  .section-advertisement-description {
+    font-size: 76px;
+    line-height: 1.05;
+    padding: 0px 13px;
+  }
+
+  .section-advertisement-marker {
+    max-width: 820px;
+  }
+
+  .advertisement-description-span {
+    display: inline;
+    padding-right: 20px;
+  }
+}
