--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,17 +4,17 @@
       <div class="footer-info">
         <a href="/index.html" class="logo-brand-svg">
           <!--Mobile icon-->
-          <svg class="icon-logo" width="16" height="16">
+          <svg class="icon-logo-footer" width="16" height="16">
             <use href="/img/icons/icons.svg#icon-logo-mob"></use>
           </svg>
-          <svg class="icon-logo-text" width="148" height="12">
+          <svg class="icon-logo-text-footer" width="148" height="12">
             <use href="/img/icons/icons.svg#icon-text-mob"></use>
           </svg>
           <!--Tablet icon-->
-          <svg class="icon-logo-tab" width="18" height="18">
+          <svg class="icon-logo-tab-footer" width="18" height="18">
             <use href="/img/icons/icons.svg#icon-logo-desk"></use>
           </svg>
-          <svg class="icon-logo-text-tab" width="168" height="15">
+          <svg class="icon-logo-text-tab-footer" width="168" height="15">
             <use href="/img/icons/icons.svg#icon-text-desk"></use>
           </svg>
         </a>
